[project]
name = "zaneops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amqp==5.3.1",
    "asgiref==3.8.1",
    "astroid==3.3.8",
    "async-property==0.2.2",
    "attrs==25.3.0",
    "autobahn==24.4.2",
    "automat==25.4.16",
    "billiard==4.2.1",
    "black==24.3.0",
    "celery==5.4.0",
    "certifi==2024.2.2",
    "cffi==1.17.1",
    "channels==4.2.2",
    "charset-normalizer==3.3.2",
    "cli-exit-tools==1.2.6",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "click==8.1.7",
    "constantly==23.10.4",
    "cron-descriptor==1.4.5",
    "cryptography==44.0.2",
    "daphne==4.1.2",
    "dill==0.3.8",
    "django-celery-beat==2.8.0",
    "django-celery-results==2.5.1",
    "django-compat==1.0.15",
    "django-cors-headers==4.4.0",
    "django-filter==23.5",
    "django-timezone-field==7.0",
    "django==5.2",
    "djangorestframework==3.15.2",
    "docker==7.0.0",
    "drf-spectacular==0.27.1",
    "drf-standardized-errors==0.13.0",
    "faker==24.2.0",
    "flower==2.0.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "gunicorn==22.0.0",
    "humanize==4.9.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "inflection==0.5.1",
    "isort==6.0.0",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.21.1",
    "kombu==5.4.2",
    "lib-detect-testenv==2.0.8",
    "markdown-it-py==3.0.0",
    "markdown==3.5.2",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "multiprocess==0.70.16",
    "packaging==23.2",
    "pathspec==0.12.1",
    "pip==24.0",
    "platformdirs==4.2.0",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.48",
    "protobuf==5.27.3",
    "psutil==5.9.8",
    "psycopg-binary==3.2.3",
    "psycopg-pool==3.2.4",
    "psycopg==3.2.3",
    "pyasn1-modules==0.4.2",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pycurl==7.45.3",
    "pygments==2.17.2",
    "pylint==3.3.4",
    "pyopenssl==25.0.0",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "redgreenunittest==0.1.1",
    "redis==5.0.1",
    "referencing==0.33.0",
    "requests==2.31.0",
    "responses==0.25.0",
    "rpds-py==0.18.0",
    "service-identity==24.2.0",
    "setuptools==79.0.1",
    "shortuuid==1.0.13",
    "six==1.16.0",
    "smmap==5.0.2",
    "sqlparse==0.5.3",
    "tblib==3.0.0",
    "temporalio==1.6.0",
    "tomlkit==0.13.2",
    "tornado==6.4",
    "twisted==24.11.0",
    "txaio==23.1.1",
    "types-protobuf==5.27.0.20240626",
    "typing-extensions==4.13.2",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.0",
    "uv==0.7.3",
    "uvloop==0.19.0",
    "vine==5.1.0",
    "watchdog==4.0.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yapf==0.43.0",
    "zope-interface==7.2",
]

[tool.uv]
dev-dependencies = [
    "amqp==5.3.1",
    "asgiref==3.8.1",
    "astroid==3.3.8",
    "asttokens==3.0.0",
    "async-property==0.2.2",
    "attrs==25.3.0",
    "autobahn==24.4.2",
    "automat==25.4.16",
    "billiard==4.2.1",
    "black==24.3.0",
    "celery==5.4.0",
    "certifi==2024.2.2",
    "cffi==1.17.1",
    "channels==4.2.2",
    "charset-normalizer==3.3.2",
    "cli-exit-tools==1.2.6",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "click==8.1.7",
    "constantly==23.10.4",
    "cron-descriptor==1.4.5",
    "cryptography==44.0.2",
    "daphne==4.1.2",
    "decorator==5.2.1",
    "dill==0.3.8",
    "django-celery-beat==2.8.0",
    "django-celery-results==2.5.1",
    "django-compat==1.0.15",
    "django-cors-headers==4.4.0",
    "django-filter==23.5",
    "django-timezone-field==7.0",
    "django==5.2",
    "djangorestframework==3.15.2",
    "docker==7.0.0",
    "drf-spectacular==0.27.1",
    "drf-standardized-errors==0.13.0",
    "executing==2.2.0",
    "faker==24.2.0",
    "flower==2.0.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "gunicorn==22.0.0",
    "humanize==4.9.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "inflection==0.5.1",
    "ipython-pygments-lexers==1.1.1",
    "ipython==9.0.2",
    "isort==6.0.0",
    "jedi==0.19.2",
    "jsonschema-specifications==2023.12.1",
    "jsonschema==4.21.1",
    "kombu==5.4.2",
    "lib-detect-testenv==2.0.8",
    "markdown-it-py==3.0.0",
    "markdown==3.5.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "multiprocess==0.70.16",
    "mypy-extensions==1.0.0",
    "packaging==23.2",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pip==24.0",
    "platformdirs==4.2.0",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.48",
    "protobuf==5.27.3",
    "psutil==5.9.8",
    "psycopg-binary==3.2.3",
    "psycopg-pool==3.2.4",
    "psycopg==3.2.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1-modules==0.4.2",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pycurl==7.45.3",
    "pygments==2.17.2",
    "pylint==3.3.4",
    "pyopenssl==25.0.0",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "redgreenunittest==0.1.1",
    "redis==5.0.1",
    "referencing==0.33.0",
    "requests==2.31.0",
    "responses==0.25.0",
    "rich==14.0.0",
    "rpds-py==0.18.0",
    "service-identity==24.2.0",
    "setuptools==79.0.1",
    "shortuuid==1.0.13",
    "six==1.16.0",
    "smmap==5.0.2",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "tblib==3.0.0",
    "temporalio==1.6.0",
    "tomlkit==0.13.2",
    "tornado==6.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "twisted==24.11.0",
    "txaio==23.1.1",
    "types-protobuf==5.27.0.20240626",
    "typing-extensions==4.13.2",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.0",
    "uv==0.7.3",
    "uvloop==0.19.0",
    "vine==5.1.0",
    "watchdog==4.0.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yapf==0.43.0",
    "zope-interface==7.2",
]
